--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <ul id="socialLinks">
           <li class="twitter">
             <a href="https://twitter.com/maykbrito" target="_blank">
-              <img src="/images/twitter.svg" alt="ícone Twitter" />
+              <img src="./images/twitter.svg" alt="ícone Twitter" />
             </a>
           </li>
 
           <li class="instagram">
             <a href="https://instagram.com/maykbrito" target="_blank">
-              <img src="/images/instagram.svg" alt="ícone Instagram" />
+              <img src="./images/instagram.svg" alt="ícone Instagram" />
             </a>
           </li>
         </ul>
